DEVEX-630 Handle missing fs-wrapper.conf (legacy)
FS-CLI & FSGP | Kompatibilität mit aktuellem Installer und Update der Installerversion auf 3.0.7